# phx-service-api-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/phx/service_api/: client.py  response.py  utility.py
tests/: sample_test.py  secret.json
