[build-system]
requires = [
    "setuptools >= 61.0"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/"]
include = ["phx.service_api"]

[project]
name = "phx-restapi-client"
description = "Phoenix Prime service API package"
version = "1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  {name = "Daniel Egloff", email = "daniel.egloff@matrixport.com"},
]
maintainers = [
  {name = "Daniel Egloff", email = "daniel.egloff@matrixport.com"}
]
requires-python = ">= 3.11"
dependencies = [
    "requests"
]